added gameboard crud and player setup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 
 <body>
     <div id="app"></div>
+    <form>
+        <label for="name">Name</label>
+        <input name="name" type="text" placeholder="Enter player name" required />
+
+        <label for="side">Side</label>
+        <input name="side" type="checkbox" value="x" />
+        <button>Submit</button>
+    </form>
+    <button id="reset" class="reset">Reset</button>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
